# hermes

./: .gitignore  CHANGELOG.md  CHANGELOG_v1.2.0.md  CHUNKING_GUIDE_WINDOWS.md  CONTRIBUTING.md  Cargo.toml  DEVTO_ARTICLE.md  QUICK_REFERENCE_v1.1.0.txt  README.md  README_WINDOWS.md  README_v1.1.0_UPDATE.md  RELEASES.md  RELEASE_NOTES_v1.0.0.md  V1.2.0_SUMMARY.md  WINDOWS_INTEGRATION_GUIDE.md  bug_report.md  ci.yml  feature_request.md  git_push.bat  index.html  integrate_v1.1.0.bat  setup_windows.bat
docs/: HERMES_CLI_USER_GUIDE.md  HERMES_WHITEPAPER.md
src/: chunking.rs  dms.rs  error.rs  lib.rs  main.rs  progress.rs  shamir.rs  steganography.rs
src/commands/: checkin.rs  completion.rs  config.rs  dms_disable.rs  dms_status.rs  export_kyber_pubkey.rs  export_pubkey.rs  import_kyber_pubkey.rs  import_pubkey.rs  init.rs  interactive.rs  key_list_archived.rs  key_recover.rs  key_rotate.rs  key_split.rs  keygen.rs  list.rs  list_keys.rs  mod.rs  recv_batch.rs  recv_file.rs  recv_file_chunked.rs  recv_msg.rs  send_batch.rs  send_dir.rs  send_file.rs  send_file_chunked.rs  send_msg.rs  shamir.rs  share_verify.rs  sign_file.rs  stego_capacity.rs  stego_hide.rs  stego_reveal.rs  validate.rs  verify_signature.rs
src/config/: settings.rs
src/crypto/: decrypt.rs  dilithium.rs  encrypt.rs  mod.rs  pqc.rs  rsa.rs
src/transfer/: mod.rs  sftp.rs
src/ui/: banner.rs  mod.rs  progress.rs
src/web/: api.rs  mod.rs  server.rs
static/: index.html
