[package]
name = "hermes"
version = "1.0.0"
edition = "2021"
authors = ["Altug Tatlisu <contact@chronocoder.dev>"]
description = "Secure file transfer with military-grade encryption"
license = "MIT"

[[bin]]
name = "hermes"
path = "src/main.rs"

[dependencies]
aes-gcm = "0.10"
argon2 = "0.5"
rand = "0.8"
ssh2 = "0.9"
base64 = "0.21"
hex = "0.4"
rsa = "0.9"
rand_core = { version = "0.6", features = ["getrandom"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.4", features = ["derive"] }
clap_complete = "4.4"
colored = "2.0"
crossterm = "0.27"
indicatif = "0.17"
dialoguer = "0.11"
dirs = "5.0"
toml = "0.8"
thiserror = "1.0"
anyhow = "1.0"
chrono = "0.4"
flate2 = "1.0"
sha2 = "0.10"

[dev-dependencies]
tempfile = "3.8"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true