[package]
name = "hermes"
version = "2.3.0"
edition = "2021"

[dependencies]
aes-gcm = "0.10"
argon2 = "0.5"
base64 = "0.22"
pqc_kyber = "0.7"
pqcrypto-dilithium = "0.5"
pqcrypto-traits = "0.3"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.5", features = ["derive"] }
clap_complete = "4.5"
colored = "2.1"
dialoguer = "0.11"
dirs = "5.0"
flate2 = "1.0"
hex = "0.4"
image = "0.24"
indicatif = "0.17"
num-bigint = "0.4"
num-traits = "0.2"
rand = "0.8"
rsa = "0.9"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
ssh2 = "0.9"
thiserror = "1.0"
toml = "0.8"

[dev-dependencies]
tempfile = "3.15"